--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@types/express": "^4.17.8",
+    "bcryptjs": "^2.4.3",
     "body-parser": "^1.19.0",
     "date-fns": "^2.16.1",
     "express": "^4.17.1",
@@ -20,6 +21,7 @@
     "uuidv4": "^6.2.4"
   },
   "devDependencies": {
+    "@types/bcryptjs": "^2.4.2",
     "@typescript-eslint/eslint-plugin": "^4.9.0",
     "@typescript-eslint/parser": "^4.9.0",
     "eslint": "^7.14.0",
